--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ title: Trotto's homepage
 email: davide1angioni@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Just trying to learn how to use Jekyll for creating pages.
-baseurl: "https://davidetr8.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  DavideTr8
 
 # Build settings
-theme: minima
+theme: architect
 plugins:
   - jekyll-feed
 
