--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  DavideTr8
 
 # Build settings
-remote_theme: architect
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
-  - jekyll-feed
-
+    - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
