--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ github_username:  DavideTr8
 # Build settings
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
-    - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-remote-theme
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
