--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default.
